project/test/semantics/bad/input/Bad74_shouldCheckIfExpressionPassedToForeachIsAList.ty
singleton class GenericTypes {
    
    actions: {
        main: () -> Void = {
            val list: List[Int] = List[Int](3, 4, 222, 5);
            val notAList: Int = 5;
            
            for (x: Int; in notAList) { // UnexpectedTypeError
                System#print(x)
                System#print(" ")
            }
        }
    }
}
